--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,5 @@ cython_debug/
 # My Additions
 #  Add any additional files or directories you want to ignore here.
 .env.sample
+.env.sample-db
+.env
